# InfrastructurePlatform

./: .gitignore  README.md
02-QT/: CMakeLists.txt  configure.py
02-QT/scripts/: conanfile.py  conanprofile
02-QT/src/: CMakeLists.txt  main.cpp  plugin_import.cpp
03-VUE/: README.md
03-VUE/backend/: CMakeLists.txt  configure.py
03-VUE/backend/include/: auth.hpp  users.hpp
03-VUE/backend/src/: main.cpp
03-VUE/backend/src/service/: CMakeLists.txt  authservice.cpp  authservice.h  backgroudmanager.cpp  backgroudmanager.h
03-VUE/frontend/: pnpm-lock.yaml
03-VUE/frontend/src/: App.vue
03-VUE/frontend/src/api/: auth.js
03-VUE/frontend/src/router/: index.js
03-VUE/frontend/src/stores/: userStore.js
03-VUE/frontend/src/views/: HomePage.vue  LoginPage.vue
